tests/unsafe/placement/call_let_def.snap
---
source: tests/lib.rs
---
exit_code = 1
stdout = ''
stderr = '''
error: function main directly contains 1 unjustified call to annotated unsafe functions, but is not annotated unsafe
  --> [SNIFF_TEST_DIR]/unsafe/placement/call_let_def.rs:8:1
   |
 8 | fn main() {
   | ^^^^^^^^^
   |
   = note: reachable from [*main*]
note: deref is called here
  --> [SNIFF_TEST_DIR]/unsafe/placement/call_let_def.rs:11:22
   |
11 |     let _ = unsafe { deref(ptr) };
   |                      ^^^^^^^^^^

error: aborting due to 1 previous error

'''
